--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,12 @@
 
 # compiled output
 /dist
-/tmp
 /out-tsc
-# Only exists if Bazel was run
-/bazel-out
+/src/generated
+/tmp
 
 # dependencies
 /node_modules
-
-# profiling files
-chrome-profiler-events*.json
-speed-measure-plugin*.json
 
 # IDEs and editors
 /.idea
@@ -29,17 +24,24 @@ speed-measure-plugin*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-.history/*
 
 # misc
+/.firebase/
 /.sass-cache
 /connect.lock
 /coverage
 /libpeerconnection.log
+debug.log
+firebase-debug.log
 npm-debug.log
-yarn-error.log
 testem.log
 /typings
+yarn-error.log
+
+# e2e
+/e2e/*.js
+/e2e/*.map
+protractor-results*.txt
 
 # System Files
 .DS_Store
