--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "~9.1.0",
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
+    "@statecharts/xstate-viz": "^0.3.0",
+    "@xstate/viz": "^0.1.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "xstate": "^4.8.0",
+    "xstate-plantuml": "^0.4.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
